// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StoryTypeBox /> should not render as a box, with title and category label only 1`] = `
.c3 {
  font-family: ProximaNovaCond,sans-serif;
  font-size: 14px;
  font-weight: bold;
  text-transform: uppercase;
  color: #0A7BC2;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #0A7BC2;
  font-weight: normal;
  margin-right: 8px;
  padding: 5px 8px 3px;
  font-size: 14px;
  line-height: 16px;
}

.c3:hover {
  color: #085c91;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 1.125rem 0;
}

.c1 {
  padding: 0 1.125rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c2 {
  margin-bottom: 15px;
}

.c4 {
  margin: 0;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: bold;
}

.c5 {
  color: #666;
  font-family: ElizabethSerif,Georgia,serif;
  font-size: 14px;
  line-height: 1.5;
  margin-top: 0.5rem;
}

@media only screen and (max-width:37.31em) {
  .c4 {
    font-size: 1.125rem;
  }
}

@media only screen and (min-width:37.37em) {
  .c4 {
    font-size: 1.75rem;
  }
}

@media only screen and (max-width:37.31em) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3"
      >
        Ali's Top Reviews
      </span>
    </div>
    <h2
      class="c4"
    >
      Dogs
    </h2>
    <div
      class="c5"
    />
  </div>
</div>
`;

exports[`<StoryTypeBox /> should render as a box with title and description only 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 1.125rem 0;
  margin-bottom: 2.5rem;
  background-color: #F5F5F5;
}

.c1 {
  padding: 0 1.125rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c2 {
  margin: 0;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: bold;
}

.c3 {
  color: #666;
  font-family: ElizabethSerif,Georgia,serif;
  font-size: 14px;
  line-height: 1.5;
  margin-top: 0.5rem;
}

@media only screen and (max-width:37.31em) {
  .c2 {
    font-size: 1.125rem;
  }
}

@media only screen and (min-width:37.37em) {
  .c2 {
    font-size: 1.75rem;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 {
    margin-bottom: 1.5rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h2
      class="c2"
    >
      Ali's Top Reviews
    </h2>
    <div
      class="c3"
    >
      This a page dedicated to everything that Ali loves the most in life.
    </div>
  </div>
</div>
`;

exports[`<StoryTypeBox /> should render as a box with title and image only 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 1.125rem 0;
  margin-bottom: 2.5rem;
  background-color: #F5F5F5;
}

.c1 {
  padding: 0 1.125rem;
}

.c2 {
  margin: 0;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: bold;
}

.c3 {
  color: #666;
  font-family: ElizabethSerif,Georgia,serif;
  font-size: 14px;
  line-height: 1.5;
  margin-top: 0.5rem;
}

.c4 {
  display: block;
  width: 100%;
}

@media only screen and (max-width:37.31em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
  }
}

@media only screen and (min-width:37.37em) {
  .c1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

@media only screen and (max-width:37.31em) {
  .c2 {
    font-size: 1.125rem;
  }
}

@media only screen and (min-width:37.37em) {
  .c2 {
    font-size: 1.75rem;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 {
    margin-bottom: 1.5rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h2
      class="c2"
    >
      Ali's Top Reviews
    </h2>
    <div
      class="c3"
    />
  </div>
  <div
    class="c1"
  >
    <img
      class="c4"
      src="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,fl_progressive,g_center,h_180,q_80,w_320/dvgmz3utpyl8fhivjejt.jpg"
    />
  </div>
</div>
`;

exports[`<StoryTypeBox /> should render as a box with title, description and image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 1.125rem 0;
  margin-bottom: 2.5rem;
  background-color: #F5F5F5;
}

.c1 {
  padding: 0 1.125rem;
}

.c2 {
  margin: 0;
  font-family: ProximaNovaCond,sans-serif;
  font-weight: bold;
}

.c3 {
  color: #666;
  font-family: ElizabethSerif,Georgia,serif;
  font-size: 14px;
  line-height: 1.5;
  margin-top: 0.5rem;
}

.c4 {
  display: block;
  width: 100%;
}

@media only screen and (max-width:37.31em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
  }
}

@media only screen and (min-width:37.37em) {
  .c1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

@media only screen and (max-width:37.31em) {
  .c2 {
    font-size: 1.125rem;
  }
}

@media only screen and (min-width:37.37em) {
  .c2 {
    font-size: 1.75rem;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 {
    margin-bottom: 1.5rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h2
      class="c2"
    >
      Ali's Top Reviews
    </h2>
    <div
      class="c3"
    >
      This a page dedicated to everything that Ali loves the most in life.
    </div>
  </div>
  <div
    class="c1"
  >
    <img
      class="c4"
      src="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,fl_progressive,g_center,h_180,q_80,w_320/dvgmz3utpyl8fhivjejt.jpg"
    />
  </div>
</div>
`;
